--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,36 @@
 {
+  "name": "crossgym",
+  "version": "1.0.0",
+  "description": "Aplicación de evaluación física para gimnasio",
+  "main": "index.js",
+  "scripts": {
+    "dev": "nodemon index.js",
+    "start": "node index.js",
+    "client": "cd client && npm start",
+    "install-client": "cd client && npm install",
+    "test": "jest"
+  },
+  "keywords": ["gym", "fitness", "evaluation"],
+  "author": "Adrian Olias Ortiz",
+  "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^1.21.0",
     "config-yml": "^0.10.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.5.2"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.2",
+    "multer": "1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
+    "nodemailer": "^6.9.11",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
     "supertest": "^7.0.0"
