--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,11 @@
     "install-client": "cd client && npm install",
     "test": "jest"
   },
-  "keywords": ["gym", "fitness", "evaluation"],
+  "keywords": [
+    "gym",
+    "fitness",
+    "evaluation"
+  ],
   "author": "Adrian Olias Ortiz",
   "license": "ISC",
   "dependencies": {
@@ -30,7 +34,7 @@
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
-    "nodemailer": "^6.9.11",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
     "supertest": "^7.0.0"
