--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.22.2",
     "react-slick": "^0.30.2",
     "react-spring": "^9.7.3",
+    "react-toastify": "^10.0.5",
     "react-tooltip": "^5.26.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
